[UPD] Add template information in collection
