# src/main/java/fr/gatherthem/gatherthem_server/collections/domain/model/CollectionModel.java
@@ -11,6 +11,7 @@ public class CollectionModel {
     private String description;
     private Date creationDate;
     private UserModel owner;
+    private TemplateModel template;
 
     public CollectionModel() {
     }
@@ -55,5 +56,11 @@ public class CollectionModel {
         this.owner = owner;
     }
 
+    public TemplateModel getTemplate() {
+        return template;
+    }
 
+    public void setTemplate(TemplateModel template) {
+        this.template = template;
+    }
 }
